# animalReserve

./: .gitignore  Animal.cpp  Animal.h  CMakeLists.txt  Food.cpp  Food.h  README.md  Reserve.cpp  Reserve.h  Simulator.cpp  Simulator.h  command.txt  constants.txt  main.cpp  utils.h
Body/: Body.cpp  Body.h
Carrot/: Carrot.cpp  Carrot.h
Grass/: Grass.cpp  Grass.h
Kangaroo/: Kangaroo.cpp  Kangaroo.h
Meat/: Meat.cpp  Meat.h
Mysterio/: Mysterio.cpp  Mysterio.h
Rabbit/: Rabbit.cpp  Rabbit.h
Sheep/: Sheep.cpp  Sheep.h
Wolf/: Wolf.cpp  Wolf.h
misteryFood/: misteryFood.cpp  misteryFood.h
